; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/mantis/extr_mantis_vp1034.c_vp1034_set_voltage.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/mantis/extr_mantis_vp1034.c_vp1034_set_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.mantis_pci* }
%struct.mantis_pci = type { i32 }

@MANTIS_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Polarization=[13V]\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"Polarization=[18V]\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"Frontend (dummy) POWERDOWN\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"Invalid = (%d)\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@MANTIS_GPIF_DOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vp1034_set_voltage(%struct.dvb_frontend* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_frontend*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mantis_pci*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %8 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.mantis_pci*, %struct.mantis_pci** %10, align 8
  store %struct.mantis_pci* %11, %struct.mantis_pci** %6, align 8
  %12 = load i32, i32* %5, align 4
  switch i32 %12, label %30 [
    i32 130, label %13
    i32 129, label %20
    i32 128, label %27
  ]

13:                                               ; preds = %2
  %14 = load i32, i32* @MANTIS_ERROR, align 4
  %15 = call i32 (i32, i32, i8*, ...) @dprintk(i32 %14, i32 1, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.mantis_pci*, %struct.mantis_pci** %6, align 8
  %17 = call i32 @mantis_gpio_set_bits(%struct.mantis_pci* %16, i32 13, i32 1)
  %18 = load %struct.mantis_pci*, %struct.mantis_pci** %6, align 8
  %19 = call i32 @mantis_gpio_set_bits(%struct.mantis_pci* %18, i32 14, i32 0)
  br label %36

20:                                               ; preds = %2
  %21 = load i32, i32* @MANTIS_ERROR, align 4
  %22 = call i32 (i32, i32, i8*, ...) @dprintk(i32 %21, i32 1, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %23 = load %struct.mantis_pci*, %struct.mantis_pci** %6, align 8
  %24 = call i32 @mantis_gpio_set_bits(%struct.mantis_pci* %23, i32 13, i32 1)
  %25 = load %struct.mantis_pci*, %struct.mantis_pci** %6, align 8
  %26 = call i32 @mantis_gpio_set_bits(%struct.mantis_pci* %25, i32 14, i32 1)
  br label %36

27:                                               ; preds = %2
  %28 = load i32, i32* @MANTIS_ERROR, align 4
  %29 = call i32 (i32, i32, i8*, ...) @dprintk(i32 %28, i32 1, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  br label %36

30:                                               ; preds = %2
  %31 = load i32, i32* @MANTIS_ERROR, align 4
  %32 = load i32, i32* %5, align 4
  %33 = call i32 (i32, i32, i8*, ...) @dprintk(i32 %31, i32 1, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i32 %32)
  %34 = load i32, i32* @EINVAL, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %3, align 4
  br label %39

36:                                               ; preds = %27, %20, %13
  %37 = load i32, i32* @MANTIS_GPIF_DOUT, align 4
  %38 = call i32 @mmwrite(i32 0, i32 %37)
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %30
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @dprintk(i32, i32, i8*, ...) #1

declare dso_local i32 @mantis_gpio_set_bits(%struct.mantis_pci*, i32, i32) #1

declare dso_local i32 @mmwrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
